# aiocryptogram

./: README.md  config.ini  main.py  pyproject.toml  requirements.txt
aiocryptogram/: __init__.py  color.py  cryptopay.py
docs/: color-lib.md  getting-started.md  index.md
tests/: test_main.py
